{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 13,
  "lineage": "141ae5ff-2a7e-964f-e8d8-5d9f490e929c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:route-table/rtb-0308b294cb2e3a6ed",
            "id": "rtb-0308b294cb2e3a6ed",
            "owner_id": "428858718180",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "PrivateRouteTable1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateRouteTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:route-table/rtb-08f226200d6715a10",
            "id": "rtb-08f226200d6715a10",
            "owner_id": "428858718180",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "PrivateRouteTable2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateRouteTable2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec9c1e5761aff41f",
            "route_table_id": "rtb-0308b294cb2e3a6ed",
            "subnet_id": "subnet-02b9c3797c2e1443c"
          },
          "dependencies": [
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9c0c65a8ee9219",
            "route_table_id": "rtb-08f226200d6715a10",
            "subnet_id": "subnet-017264208bdda4e23"
          },
          "dependencies": [
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:security-group/sg-0d44570a584e02fba",
            "description": "SG for vpce",
            "egress": [],
            "id": "sg-0d44570a584e02fba",
            "ingress": [],
            "name": "vpce",
            "name_prefix": "",
            "owner_id": "428858718180",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress from lambda",
            "from_port": 443,
            "id": "sgrule-686081372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d44570a584e02fba",
            "security_group_rule_id": "sgr-0f31ab179856cf0a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpce_security_group",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpce_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Ingress traffic for vpce HTTPS",
            "from_port": 443,
            "id": "sgrule-3728221384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d44570a584e02fba",
            "security_group_rule_id": "sgr-01052b5c80ac199ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpce_security_group",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:subnet/subnet-02b9c3797c2e1443c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b9c3797c2e1443c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428858718180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:subnet/subnet-017264208bdda4e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017264208bdda4e23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428858718180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateSubnet2"
            },
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:vpc/vpc-07ffc4ffa089733d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08879a49753187685",
            "default_route_table_id": "rtb-09af6cad9fac78beb",
            "default_security_group_id": "sg-0835d701ef1f9462c",
            "dhcp_options_id": "dopt-0305825317b13ded8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ffc4ffa089733d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09af6cad9fac78beb",
            "owner_id": "428858718180",
            "tags": {
              "Environment": "test",
              "Name": "MyVPC"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "MyVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:vpc-endpoint/vpce-0f558935bd20585c7",
            "dns_entry": [
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd-eu-west-1a.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f558935bd20585c7-d6kencmd-eu-west-1b.execute-api.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "execute-api.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0693924YB1F26GRGGBE"
              },
              {
                "dns_name": "*.execute-api.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0693924YB1F26GRGGBE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f558935bd20585c7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01419d77d31ef8b59",
              "eni-0c6a1ae399f4ba613"
            ],
            "owner_id": "428858718180",
            "policy": "{\"Statement\":[{\"Action\":\"execute-api:*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::428858718180:root\"},\"Resource\":\"arn:aws:execute-api:eu-west-1:428858718180:*\",\"Sid\":\"apigw\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d44570a584e02fba"
            ],
            "service_name": "com.amazonaws.eu-west-1.execute-api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.185",
                "subnet_id": "subnet-02b9c3797c2e1443c"
              },
              {
                "ipv4": "10.0.2.249",
                "subnet_id": "subnet-017264208bdda4e23"
              }
            ],
            "subnet_ids": [
              "subnet-017264208bdda4e23",
              "subnet-02b9c3797c2e1443c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "dependencies": [
            "aws_security_group.vpce_security_group",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.api_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:428858718180:vpc-endpoint/vpce-03aca1c11d80584fd",
            "dns_entry": [
              {
                "dns_name": "vpce-03aca1c11d80584fd-zc8somfm.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03aca1c11d80584fd-zc8somfm-eu-west-1a.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03aca1c11d80584fd-zc8somfm-eu-west-1b.lambda.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "lambda.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00118722S23P1EJFP64T"
              },
              {
                "dns_name": "lambda.eu-west-1.api.aws",
                "hosted_zone_id": "Z05131101Z0291AYGGMZP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03aca1c11d80584fd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0657b97ba4ceb92c9",
              "eni-0d7b7ae5c5c37ec47"
            ],
            "owner_id": "428858718180",
            "policy": "{\"Statement\":[{\"Action\":\"lambda:*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::428858718180:root\"},\"Resource\":\"arn:aws:lambda:eu-west-1:428858718180:*\",\"Sid\":\"AllowAllActions\"},{\"Action\":\"lambda:ListFunctions\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::428858718180:root\"},\"Resource\":\"*\",\"Sid\":\"AllowListFunctions\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d44570a584e02fba"
            ],
            "service_name": "com.amazonaws.eu-west-1.lambda",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.65",
                "subnet_id": "subnet-02b9c3797c2e1443c"
              },
              {
                "ipv4": "10.0.2.219",
                "subnet_id": "subnet-017264208bdda4e23"
              }
            ],
            "subnet_ids": [
              "subnet-017264208bdda4e23",
              "subnet-02b9c3797c2e1443c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07ffc4ffa089733d0"
          },
          "dependencies": [
            "aws_security_group.vpce_security_group",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.lambda_endpoint"
          ]
        }
      ]
    }
  ]
}